# mse2cdb

./: .gitignore  CMakeLists.txt  FindLibZip.cmake  FindLua.cmake  FindLua53.cmake  Findsqlite3.cmake  README.md  main.cpp
domain/: CDBCard.hpp  MSEDataNode.cpp  MSEDataNode.hpp
io/: CDBAccess.cpp  CDBAccess.hpp  LuaScriptFinder.cpp  LuaScriptFinder.hpp  MSEReader.cpp  MSEReader.hpp
lua/: constant.lua  series10.lua  series9.lua  utility.lua  ygopro-anime.lua
lua/lang/en/: archetypes.lua  dict.lua
service/: LuaCardData.cpp  LuaCardData.hpp  LuaConverters.cpp  LuaConverters.hpp  LuaMSENodeData.cpp  LuaMSENodeData.hpp
